--- a/style.css
+++ b/style.css
@@ -63,3 +63,17 @@ footer{
   padding-top: 20px;
   color: #CCC;
 }
+
+nav a:hover{
+  text-decoration: underline;
+  color: #0056b3;
+}
+
+
+
+
+
+
+
+
+
