--- a/style.css
+++ b/style.css
@@ -71,11 +71,18 @@ nav a:hover{
 
 #header a:hover {
   text-decoration: underline;
-  
+
 }
 
+.questions {
+  padding: 0 20px 0 20px;
+}
 
+.questions h4 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
 
-
-
-
+.question p {
+  margin-top: 30px;
+}
