--- a/style.css
+++ b/style.css
@@ -86,3 +86,10 @@ nav a:hover{
 .question p {
   margin-top: 30px;
 }
+
+.button a {
+  border-radius: 5px;
+  color: #FFF;
+  background-color: #007bff;
+  border-color: #007bff
+}
