--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav a:hover{
   margin-top: 30px;
 }
 
-.button a {
+.btn a {
   border-radius: 5px;
   color: #FFF;
   background-color: #007bff;
@@ -95,4 +95,9 @@ nav a:hover{
   text-decoration: none;
   padding: 18px;
   font-size: 20px;
+}
+
+.btn a:hover {
+  background-color: #0069d9;
+  border-color: #0069d9;
 }
