--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ div.questions h4 {
   margin-bottom: 10px;
 }
 
-.question p {
-  margin-top: 30px;
+div.questions p {
+  margin: 30px 0 0 0;
 }
 
 .btn a {
