--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ div.questions.btn a {
   font-size: 20px;
 }
 
-.btn a:hover {
+div.questions.btn a:hover {
   background-color: #0069d9;
   border-color: #0069d9;
 }
