--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ div.questions p {
   margin-top: 30px;
 }
 
-div.questions.btn a {
+div.questions a.btn {
   border-radius: 5px;
   color: #FFF;
   background-color: #007bff;
@@ -97,7 +97,7 @@ div.questions.btn a {
   font-size: 20px;
 }
 
-div.questions.btn a:hover {
+div.questions a.btn:hover {
   background-color: #0069d9;
   border-color: #0069d9;
 }
